--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -197,7 +197,7 @@ linter:
     - avoid_unnecessary_containers
     # Provide all the properties of the widget
     # https://dart.dev/tools/linter-rules/diagnostic_describe_all_properties
-    - diagnostic_describe_all_properties
+    # - diagnostic_describe_all_properties
     # Well, if you touch BuildContext in async, you need to make sure that it is not disposed.
     # https://dart.dev/tools/linter-rules/use_build_context_synchronously
     - use_build_context_synchronously
